Adicionei estilização para o scroll

--- a/content/style.css
+++ b/content/style.css
@@ -82,6 +82,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    width: 100%;
 }
 
 .kwai-imgs img {
@@ -115,6 +116,7 @@ section {
     display: flex;
     overflow-x: scroll;
     gap: 20px;
+    padding-bottom: 10px;
 }
 
 .imgs img {
@@ -126,6 +128,7 @@ section {
     display: flex;
     overflow-x: scroll;
     gap: 20px;
+    padding-bottom: 10px;
 }
 
 .reclamacao {
@@ -144,6 +147,24 @@ section {
     display: flex;
     align-items: center;
     gap: 15px;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--white);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--orange);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--dark-orange);
 }
 
 @media (max-width: 412px) {
