--- a/content/style.css
+++ b/content/style.css
@@ -189,3 +189,12 @@ footer {
         width: 85%;
     }
 }
+
+@media (max-width: 858px) {
+    .container {
+        width: 85%;
+    }
+    .header-content {
+        width: 85%;
+    }
+}
