--- a/content/style.css
+++ b/content/style.css
@@ -77,13 +77,13 @@ section {
     display: flex;
     width: 100%;
     flex-direction: column;
-    flex-wrap: initial;
     gap: 30px;
 }
 
 section a {
     color: var(--dark-orange);
     font-weight: bold;
+    text-decoration: none;
 }
 
 .kwai-imgs {
@@ -98,8 +98,8 @@ section a {
 }
 
 .filtragem {
-    background-color: var(--orange);
     align-items: center;
+    background-color: var(--orange);
     color: var(--white);
     padding: 40px 15%;
     border-radius: 15px;
@@ -107,12 +107,14 @@ section a {
 }
 
 .filtragem img {
-    flex-basis: 100px;
-    max-width: 300px;
+    align-items: center;
+    width: 50%;
+    max-width: 250px;
 }
 
 .filtragem h2 {
     color: var(--white);
+    text-align: left;
 }
 
 .title {
@@ -168,10 +170,20 @@ section a {
 }
 
 footer {
+    display: flex;
+    justify-content: center;
     background-color: var(--orange);
     color: var(--white);
     text-align: center;
     padding: 30px 0px;
+}
+
+footer img {
+    width: 80px;
+}
+
+.footer-content {
+    width: 60%;
 }
 
 ::-webkit-scrollbar {
@@ -197,6 +209,9 @@ footer {
         width: 85%;
     }
     .header-content {
+        width: 85%;
+    }
+    .footer-content {
         width: 85%;
     }
 }
